# hs-opentelemetry-instrumentation-servant

./: .gitignore  CHANGELOG.md  LICENSE  README.md  devenv.nix  hs-opentelemetry-instrumentation-servant.cabal
exe/: Main.hs  otelconfig.yaml
src/OpenTelemetry/Instrumentation/: Servant.hs
src/OpenTelemetry/Instrumentation/Servant/: Internal.hs
