cabal-version:      3.4
name:               hs-opentelemetry-instrumentation-servant
version:            0.2.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Sander
maintainer:         hey@sandydoo.me
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  OpenTelemetry.Instrumentation.Servant
                    , OpenTelemetry.Instrumentation.Servant.Internal
    -- other-extensions:
    build-depends:    base < 5
                    , hs-opentelemetry-api ==0.2.*
                    , hs-opentelemetry-instrumentation-wai
                    , http-types
                    , servant
                    , text
                    , unordered-containers
                    , wai
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hs-opentelemetry-instrumentation-servant-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.1,
        hs-opentelemetry-instrumentation-servant

executable server
    ghc-options:         -O2 -Wall -threaded -fprof-auto -rtsopts "-with-rtsopts=-N"
    main-is:             Main.hs
    hs-source-dirs:      exe
    default-language:    Haskell2010
    build-depends:       base
                       , hs-opentelemetry-instrumentation-servant
                       , hs-opentelemetry-instrumentation-wai
                       , hs-opentelemetry-sdk
                       , servant-server
                       , text
                       , unliftio
                       , warp
